Fixed buttons and treademark brought to center

--- a/public/stylesheet/app.css
+++ b/public/stylesheet/app.css
@@ -1,6 +1,12 @@
 i.icon {
  font-size: 2em;
 }
+#button{
+    margin: 1%;
+}
+.extra{
+    text-align: center;
+}
 
 .container.main {
     margin-top: 7.0em;
