--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
-<p style="align-content: center">Trademark 2019</p>
+<div style="text-align: center">
+    <p>Trademark 2019</p>
+</div>
 </body>
 </html>
