--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,29 +2,28 @@
 
 <div class="ui main text container segment">
     <div class="ui huge header"> Restful Blog  </div>
-    <div class="ui top attached segment">
+ 
         <div class="ui divided item">
                 <% blogs.forEach(function(blog){ %>
-                    <div class="item" >
+                    <div class=" ui top attached segment " >
                         <div class="ui centered left floated image ">
                           <img src="<%=blog.image %>">
                         </div> 
                          <div class="content">
-                                <a class="header" href="/blogs/<%=blog._id%>"><%=blog.title %></a>
+                                <a class="header" href="/blogs/<%=blog._id%>"><h1><%=blog.title %></h1></a>
                         </div>
                         <div class="meta">
                                 <span><%= blog.created.toDateString() %></span>
-                        </div>
+                        </dbiv>
                         <div class="description">
                                 <h3><%-blog.body.substring(0,100) %>....</h3>
                         </div> 
                         <div class="extra">
-                                <a  class="ui right floated basic violet button"href="/blogs/<%=blog._id%>"><i class="info circle icon"></i>Read more</a>
+                                <a  class="ui right basic violet button"href="/blogs/<%=blog._id%>"><i class="info circle icon"></i>Read more</a>
                         </div>
                        </div>
+                                 </div> 
                        <% }); %>
-                </div> 
-        </div>
     </div>
 </div>
 
